# socks5

./: README.md  stack.yaml
socks5-conduit/: socks5-conduit.cabal
socks5-conduit/demo/: Demo.hs
socks5-conduit/src/Data/Conduit/: Serialize.hs
socks5-conduit/src/Network/Socks5/: Conduit.hs  Socket.hs
socks5-pure/: LICENSE  socks5-pure.cabal
socks5-pure/src/Network/: Socks5.hs
socks5-pure/src/Network/Socks5/: Flow.hs  Types.hs
