name:                 socks5-pure
version:              0.1.0.0
author:               Nick Spinale
maintainer:           Nick Spinale <nick@nickspinale.com>
license:              MIT
license-file:         LICENSE
build-type:           Simple
cabal-version:        >=1.10

library
  default-language:   Haskell2010
  hs-source-dirs:     src

  exposed-modules:    Network.Socks5
                      Network.Socks5.Types
                      Network.Socks5.Flow

  build-depends:      base >=4.8 && <5
                    , bytestring
                    , cereal

test-suite tests
  type:               exitcode-stdio-1.0
  default-language:   Haskell2010
  hs-source-dirs:     tests
  main-is:            Tests.hs
  ghc-options:        -threaded

  build-depends:      base >=4.8 && <5
                    , socks5-pure
                    , bytestring
                    , cereal
